# one-email-leak

./: README.md  pyproject.toml  setup.py
.pytest_cache/v/cache/: nodeids
one_email_leak/: __init__.py  core.py
tests/: test_one_email_leak.py
